--- a/login page/style.css
+++ b/login page/style.css
@@ -19,16 +19,12 @@ body{
 }
 
 .box{
-	width: 35%;
-	padding: 5%;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	background: #005b74ba; /*black*/
-	text-align: center;
-	border-radius: 2%;
-	box-shadow: 5px 10px 10px #005b74;
+	 width: 600px;
+        margin: 5em auto;
+        padding: 2em;
+        background-color: #fdfdff;
+        border-radius: 0.5em;
+        box-shadow: 5px 10px 10px #005b74;
 }
 
 .box h1{
@@ -79,15 +75,6 @@ body{
 	font-family: sans-serif;
 }
 
-/*
-body{
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
-	background: #d1e8e2; /*#d1e8e2*/
-	/*background: url(bk9.jpg) no-repeat;
-	background-size: cover;*/
-}
 
 #nm{
     letter-spacing: 3px;
