removed comments and restored previous version
there is some issue coming up while removing the repeated classes
will fix it asap

--- a/login page/style.css
+++ b/login page/style.css
@@ -3,8 +3,6 @@ body{
 	padding: 0;
 	font-family: sans-serif;
 	background: #d1e8e2;
-	/*background: url(bk9.jpg) no-repeat;
-	background-size: cover;*/
 }
 
 #nm{
@@ -28,7 +26,7 @@ body{
 }
 
 .box h1{
-	color: #000000;
+	color: #ffffff;
 	font-weight: 400;
 }
 
@@ -52,7 +50,7 @@ body{
 	display: block;
 	margin: 6% auto;
 	text-align: center;
-	border: 2px solid #add8e6; /*#00e4e8*/
+	border: 2px solid #add8e6; 
 	padding: 5% 12%;
 	outline: none;
 	color: #ffffff;
@@ -64,9 +62,80 @@ body{
 	background: #add8e62e;
 }
 
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #d1e8e2; /*#00e4e8*/
-  opacity: 1; /* Firefox */
+::placeholder { 
+  color: #d1e8e2;
+  opacity: 1;
+}
+
+.links a {
+	justify-self: center;
+	color: #213466f2;
+	font-family: sans-serif;
+}
+
+
+#nm{
+    letter-spacing: 3px;
+}
+
+.name{
+	color: #000000;
+	top: 30%;
+	left: 30%;
+	margin: 20px;
+}
+
+.box{
+	width: 35%;
+	padding: 5%;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+	background: #ffffff;
+	text-align: center;
+}
+
+.box h1{
+	color: #000000;
+	font-weight: 400;
+}
+
+.box input[type = "text"], .box input[type = "password"]{
+	border: 0;
+	background: none;
+	display: block;
+	margin: 6% auto;
+	text-align: center;
+	border: 1px solid #005b74;
+	padding: 14px 10px;
+	width: 65%;
+	outline: none;
+	color: #000000;
+	border-radius: 4px;
+}
+
+.box input[type = "submit"]{
+	border: 0;
+	background: none;
+	display: block;
+	margin: 6% auto;
+	text-align: center;
+	border: 2px solid #005b74;
+	padding: 5% 12%;
+	outline: none;
+	color: #005b74;
+	border-radius: 25%;
+	cursor: pointer;
+}
+
+.box input[type = "submit"]:hover{
+	background: #add8e6;
+}
+
+::placeholder {
+  color: #00000091;
+  opacity: 1;
 }
 
 .links a {
