--- a/login page/style.css
+++ b/login page/style.css
@@ -3,76 +3,23 @@ body{
 	padding: 0;
 	font-family: sans-serif;
 	background: #d1e8e2;
+	/*background: url(bk9.jpg) no-repeat;
+	background-size: cover;*/
 }
 
-#nm{
-    letter-spacing: 3px;
-}
 
-.name{
-	color: #000000;
-	top: 30%;
-	left: 30%;
-	margin: 20px;
-}
 
-.box{
-	 width: 600px;
-        margin: 5em auto;
-        padding: 2em;
-        background-color: #fdfdff;
-        border-radius: 0.5em;
-        box-shadow: 5px 10px 10px #005b74;
-}
 
-.box h1{
-	color: #ffffff;
-	font-weight: 400;
-}
 
-.box input[type = "text"], .box input[type = "password"]{
-	border: 0;
-	background: none;
-	display: block;
-	margin: 6% auto;
-	text-align: center;
-	border: 1px solid #add8e6;
-	padding: 14px 10px;
-	width: 65%;
-	outline: none;
-	color: #000000;
-	border-radius: 4px;
-}
-
-.box input[type = "submit"]{
-	border: 0;
-	background: none;
-	display: block;
-	margin: 6% auto;
-	text-align: center;
-	border: 2px solid #add8e6; 
-	padding: 5% 12%;
-	outline: none;
-	color: #ffffff;
-	border-radius: 25%;
-	cursor: pointer;
-}
-
-.box input[type = "submit"]:hover{
-	background: #add8e62e;
-}
-
-::placeholder { 
-  color: #d1e8e2;
-  opacity: 1;
-}
-
-.links a {
-	justify-self: center;
-	color: #213466f2;
+/*
+body{
+	margin: 0;
+	padding: 0;
 	font-family: sans-serif;
+	background: #d1e8e2; /*#d1e8e2*/
+	/*background: url(bk9.jpg) no-repeat;
+	background-size: cover;*/
 }
-
 
 #nm{
     letter-spacing: 3px;
@@ -86,14 +33,13 @@ body{
 }
 
 .box{
-	width: 35%;
-	padding: 5%;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);
-	background: #ffffff;
+	width: 470px;
 	text-align: center;
+    margin: 5em auto;
+    padding: 5em;
+    background-color: #fdfdff;
+    border-radius: 0.5em;
+    box-shadow: 5px 10px 10px #005b74;
 }
 
 .box h1{
@@ -121,7 +67,7 @@ body{
 	display: block;
 	margin: 6% auto;
 	text-align: center;
-	border: 2px solid #005b74;
+	border: 2px solid #005b74; /*#00e4e8*/
 	padding: 5% 12%;
 	outline: none;
 	color: #005b74;
@@ -133,9 +79,9 @@ body{
 	background: #add8e6;
 }
 
-::placeholder {
-  color: #00000091;
-  opacity: 1;
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: #00000091; /*#00e4e8*/
+  opacity: 1; /* Firefox */
 }
 
 .links a {
