--- a/newAccountPages/newAccountStyle.css
+++ b/newAccountPages/newAccountStyle.css
@@ -1,3 +1,12 @@
+
+body{
+	font-family: 'Mulish', sans-serif;
+}
+* {
+	margin: 0;
+	padding: 0;
+}
+
 .info{
     display: flex !important;
     justify-content: center;
@@ -9,5 +18,23 @@
     letter-spacing: 2px;
 }
 #nm{
+	padding-left: 0px;
     letter-spacing: 3px;
 }
+.nav-link{
+	padding-top: 10px;
+	letter-spacing: 3px;
+}
+.dropdown-menu{
+	background-color: #007bff;
+	border: none !important;
+}
+.dropdown-item{
+	color: #70abff !important;
+	letter-spacing: 2px;
+}
+.dropdown>.dropdown-menu>a:hover {
+ 	color: #cce5ff !important;
+	background-color: transparent;
+}
+
