--- a/home page/styles.css
+++ b/home page/styles.css
@@ -172,7 +172,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 75vh;
     z-index: -1;
   
 }  
@@ -216,12 +216,10 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-top: 0%;
+  width: 100% !important;
   
 }
-.box1{
-  background-color: cornflowerblue;
-  height: 50%;
-}
+
 .row-content{
   background-color: darkblue;
 }
@@ -524,6 +522,10 @@ opacity: 0;
 #current{
   padding: 50px 0px 40px 0px ;
 }
-#savings{
 
+
+/*Written to remove left scrollbar*/
+.grid {
+  overflow-x: hidden; 
+  overflow-y: hidden; 
 }
