--- a/transaction page/transaction.css
+++ b/transaction page/transaction.css
@@ -1,20 +1,43 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  outline: none;
-  font-family: 'Open Sans', sans-serif;
+}
+html{
+  height: 100%;
 }
 
 body{
-  background: url("blue.jpg") no-repeat top center;
+  font-family: 'Mulish', sans-serif;
+  background: url(blue.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  /*background-color: grey;*/
-  height: 100vh;
-  font-size: 16px;
+  margin: 0;
+  padding: 0;
 }
+#nm{
+	padding-left: 0px;
+    letter-spacing: 3px;
+}
+.nav-link{
+	padding-top: 10px;
+	letter-spacing: 3px;
+}
+.dropdown-menu{
+	background-color: #007bff;
+	border: none !important;
+}
+.dropdown-item{
+	color: #70abff !important;
+	letter-spacing: 2px;
+}
+.dropdown>.dropdown-menu>a:hover {
+ 	color: #cce5ff !important;
+	background-color: transparent;
+}
+
 
 .wrapper{
   width: 100%;
@@ -25,7 +48,7 @@ body{
   max-width: 500px;
   height: auto;
   margin: 50px auto;
-  background: #fff;
+  background: #ffffffd9;
   padding: 20px 40px 30px;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
@@ -42,7 +65,7 @@ body{
   margin-bottom: 20px;
 }
 
-.input-form{
+#input{
   margin-bottom: 20px;
 }
 
@@ -69,6 +92,7 @@ body{
     color: #212121;
     border-radius: 3px;
 }
+
 
 .input-form .section-2{
   display: flex;
@@ -110,57 +134,21 @@ body{
     font-size: 1.5em;
     margin-bottom: 15px;
   }
+  
 }
 
-
-body{
-    font-family: 'Mulish', sans-serif;
-}
-* {
-    margin: 0;
-    padding: 0;
-}
-
-.info{
-    display: flex !important;
-    justify-content: center;
-    background-color: #2e6194;
-    color: white;
-    margin: 10px 50px 10px 50px !important;
-    border-radius: 5px;
-    height: 30px;
-    letter-spacing: 2px;
-}
-#nm{
-    padding-left: 0px;
-    letter-spacing: 3px;
-}
-.nav-link{
-    padding-top: 10px;
-    letter-spacing: 3px;
-}
-.dropdown-menu{
-    background-color: #007bff;
-    border: none !important;
-}
-.dropdown-item{
-    color: #70abff !important;
-    letter-spacing: 2px;
-}
-.dropdown>.dropdown-menu>a:hover {
-     color: #cce5ff !important;
-    background-color: transparent;
-}
-
-.btn{
-	background: #124a92;
-	color: #fff;
-	font-size: 1.25em;	
-	padding: 10px 0;
-	text-align: center;
-	text-transform: uppercase;
-	border-radius: 5px;
-	cursor: pointer;
-	font-weight: bold;
-	letter-spacing: 2px;
+.acn{
+  display: block;
+    width: 100%;
+    height: calc(1.5em + .75rem + 2px);
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
