--- a/home page/styles.css
+++ b/home page/styles.css
@@ -12,6 +12,11 @@
   .block{
     display: block;
   }
+  /* nav css starts*/
+  .yellow{
+    background: #22253c;
+    position: relative;
+  }
   nav {
     width: 80%;
     margin: 0 auto;
@@ -20,22 +25,6 @@
     box-shadow: 0px 5px 0px #dedede;
     background:#22253c; 
     color: rgba(0, 0, 0, 0.5);
-  }
-  .yellow{
-    background: #22253c;
-    position: relative;
-  }
-  .bt{
-    padding: 15px;
-    text-decoration: none;
-    color: #aaa;
-    font-weight: 800;
-    text-transform: uppercase;
-    font-size: 20px; 
-    position: absolute;
-    right: 10%;
-    top:35%;
-    border-radius: 15px;
   }
   
   nav ul {
@@ -60,15 +49,13 @@
   nav ul li a:before {
     transition: all .5s;
   }
-  nav ul li a:hover {
-    color: #555;
-  }
+ 
   nav.shift ul li a {
     position:relative;
     z-index: 1;
   }
   nav.shift ul li a:hover {
-    color: whitesmoke;
+    color: black;
   }
   nav.shift ul li a:after {
     display: block;
@@ -82,7 +69,7 @@
     height: 1px;
     content: '.';
     color: transparent;
-    background: rgb(107, 76, 107);
+    background: whitesmoke;
     visibility: none;
     opacity: 0;
     z-index: -1;
@@ -101,19 +88,64 @@
     z-index: -1;
   
 }  
-
-
-.headline{
-  position: absolute;
-  top: 70%;
-  right: 2%;
-  color: black;
-  size: 100px;
-  font-style: italic;
-  border-bottom: 2px solid black;
-  z-index: 3;
+.dropdown-item{
+  transition: none;
+  margin-left: 0%;
 }
+  .bt{
+    padding: 15px;
+    text-decoration: none;
+    color: #aaa;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 20px; 
+    position: absolute;
+    right: 10%;
+    top:35%;
+    border-radius: 15px;
+  }
+  
+  
+/* nav css ends*/
 
+/* header css starts*/
+
+.jumbo{
+  padding:70px 30px 70px 30px;
+  position: relative;
+  margin-bottom:0px;
+  background-color: rgb(23, 23, 68)
+  ;
+  
+}
+header h3{
+  color: #dedede;
+  position: absolute;
+  top: 20%;
+  right: 13%;
+  border-bottom: 0.5px solid whitesmoke;
+  font-style: italic;
+}
+.signup{
+  position: absolute;
+  right: 10%;
+  top:35%
+}
+.head-img{
+  height: 250px;
+  width: 275px;
+}
+.heading h1{
+  border-bottom: 1px solid whitesmoke;
+  color: azure;
+  font-weight: 800;
+}
+.heading h2{
+  color: azure;
+  font-style: oblique;
+}
+/* header css ends*/
+/* grid css  starts*/
 .grid{
   display: grid;
   grid-template-areas: 'carousel div1'
@@ -122,12 +154,24 @@
   margin-top: 0%;
   
 }
-.box1{
-  background-color: cornflowerblue;
-  height: 50%;
+#mycarousel{
+  grid-area: carousel;
+  height: 100%;
+  width: 100%;
+  background-color: #143064;
 }
-.row-content{
-  background-color:#143064;
+.carousel-item {
+  height: 300px;
+  text-align: center;
+  justify-content: center;
+  margin-top: 5cm;
+}
+
+.carousel-item img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 300px;
 }
 .main-div-1{
   grid-area: div1;
@@ -198,7 +242,48 @@ margin-top: 100px;
       margin-top: 30px;
       
       } 
-.main-div-2 {
+      .div-4 h2{
+        position: absolute;
+        top: 0%;
+        left:35%;
+        color:whitesmoke;
+      }  
+      .div-3 h2{
+        position: absolute;
+        top: 0%;
+        left:35%;
+        color: whitesmoke;
+      }  
+      .div-2 h2{
+        position: absolute;
+        top: 0%;
+        left:35%;
+        color: whitesmoke;
+      }  
+      .div-1 h2{
+        position: absolute;
+        top: 0%;
+        left:35%;
+        color:whitesmoke;
+      }    
+      .div-5 h2{
+        position: absolute;
+        top: 0%;
+        left:35%;
+        color: white;
+      } 
+      
+      
+      a div h2{
+        margin-top: 30px;
+        border-top: 1px solid white;
+        border-bottom: 2px solid black;
+        padding: 10px 10px 10px 10px;
+        border-radius: 5px;
+      }         
+ /* grid css ends*/        
+/*grid animation and effects starts*/
+ .main-div-2 {
   transition: .5s ease;
   }
   
@@ -296,37 +381,8 @@ margin-top: 100px;
             transition: .5s ease;
             }
 
-  .div-4 h2{
-    position: absolute;
-    top: 0%;
-    left:35%;
-    color:whitesmoke;
-  }  
-  .div-3 h2{
-    position: absolute;
-    top: 0%;
-    left:35%;
-    color: whitesmoke;
-  }  
-  .div-2 h2{
-    position: absolute;
-    top: 0%;
-    left:35%;
-    color: whitesmoke;
-  }  
-  .div-1 h2{
-    position: absolute;
-    top: 0%;
-    left:35%;
-    color:whitesmoke;
-  }    
-  .div-5 h2{
-    position: absolute;
-    top: 0%;
-    left:35%;
-    color: white;
-  }    
-
+ /*grid animation and effects ends*/ 
+ /*svg animation and effects starts*/
  #money{
    animation: wheel 1s ease infinite ;
    transform-origin: center;
@@ -368,41 +424,21 @@ opacity: 0;
         transform: translatey(-20%);
        }
 }
- .col{
-   position: relative;
- }
- #mycarousel{
-   grid-area: carousel;
-   height: 100%;
-   width: 100%;
- }
- .col{
-   width:75%;
-
- }
- ol{
-   bottom: 0;
- }
- .jumbo{
-  padding:70px 30px 70px 30px;
+/*svg animation and effects ends*/
+.col{
   position: relative;
-  margin-bottom:0px;
-  background-color:darkmagenta;
-  
 }
-.signup{
-  position: absolute;
-  right: 10%;
-  top:35%
+
+.col{
+  width:75%;
+
 }
-.div-3 svg #id-5{
-  color:rgb(109, 21, 52) ;
+ol{
+  bottom: 0;
 }
-.btn-primary{
-  width: 200px;
-  height: 3rem;
-  background-color: indigo;
-}
+
+/*footer css*/
+
 .footer{
   background-color: rgb(23, 23, 68);
   padding-top: 25px;
@@ -418,51 +454,8 @@ opacity: 0;
   h5{
     border-bottom: 1px solid aliceblue;
   }
-  .carousel-item {
-  height: 300px;
-  text-align: center;
-  justify-content: center;
-  margin-top: 5cm;
-}
+/*media queries for reponsiveness*/  
 
-.carousel-item img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    min-height: 300px;
-}
-.head-img{
-  height: 250px;
-  width: 275px;
-}
-.heading h1{
-  border-bottom: 1px solid whitesmoke;
-  color: azure;
-  font-weight: 800;
-}
-.heading h2{
-  color: azure;
-  font-style: oblique;
-}
-.jumbo{
-  background-color: rgb(23, 23, 68)
-  ;
-}
-a div h2{
-  margin-top: 30px;
-  border-top: 1px solid white;
-  border-bottom: 2px solid black;
-  padding: 10px 10px 10px 10px;
-  border-radius: 5px;
-}
-header h3{
-  color: #dedede;
-  position: absolute;
-  top: 20%;
-  right: 13%;
-  border-bottom: 0.5px solid whitesmoke;
-  font-style: italic;
-}
 @media (max-width: 700px) {
   .grid {
     grid-template-areas:
@@ -636,12 +629,18 @@ header h3{
     z-index: -1;
   
 }  
+.row-content{
+  background-color: #143064;
+}
 
 .carousel-item {
   height: 200px;
   text-align: center;
   justify-content: space-around;
   margin-top: 5cm;
+}
+.carousel-inner{
+  width: 500px;
 }
 
 .carousel-item img {
