--- a/login_style.css
+++ b/login_style.css
@@ -2,9 +2,9 @@ body{
 	margin: 0;
 	padding: 0;
 	font-family: sans-serif;
-	background: #d1e8e2;
-	/*background: url(bk9.jpg) no-repeat;
-	background-size: cover;*/
+	/*background: #d1e8e2;*/
+	background: url(blue.jpg) no-repeat;
+	background-size: cover;
 }
 
 
