--- a/login page/style.css
+++ b/login page/style.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
+	font-family: 'Mulish', sans-serif;
 	/*background: #d1e8e2;*/
 	background: url(blue.jpg) no-repeat;
 	background-size: cover;
