--- a/login_style.css
+++ b/login_style.css
@@ -1,7 +1,7 @@
 body{
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
+	font-family: 'Mulish', sans-serif;
 	/*background: #d1e8e2;*/
 	background: url(blue.jpg) no-repeat;
 	background-size: cover;
@@ -19,7 +19,7 @@ body{
 	background: #d1e8e2; /*#d1e8e2*/
 	/*background: url(bk9.jpg) no-repeat;
 	background-size: cover;*/
-}
+
 
 #nm{
     letter-spacing: 3px;
