--- a/login page/style.css
+++ b/login page/style.css
@@ -3,8 +3,9 @@ body{
 	padding: 0;
 	font-family: 'Mulish', sans-serif;
 	/*background: #d1e8e2;*/
-	background: url(blue.jpg) no-repeat;
+	background: url(blue.jpg) no-repeat fixed center;
 	background-size: cover;
+
 }
 
 
@@ -19,7 +20,7 @@ body{
 	background: #d1e8e2; /*#d1e8e2*/
 	/*background: url(bk9.jpg) no-repeat;
 	background-size: cover;*/
-}
+
 
 #nm{
     letter-spacing: 3px;
@@ -40,6 +41,10 @@ body{
     background-color: #fdfdff;
     border-radius: 0.5em;
     box-shadow: 5px 10px 10px #005b74;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -225px 0 0 -225px;
 }
 
 .box h1{
