--- a/home page/styles.css
+++ b/home page/styles.css
@@ -230,9 +230,12 @@ margin-top: 100px;
   .div-5{
     margin-left: 50px; 
     margin-top: 50px;
-    
+    background-color: #143064;
     margin-bottom: 20px;
     }
+  .div5 svg {
+    margin-top: 20px;
+  }
 .div-4{
     margin-left: 150px; 
     margin-top: 100px;
@@ -248,6 +251,7 @@ margin-top: 100px;
         top: 0%;
         left:35%;
         color:whitesmoke;
+        z-index: 2;
       }  
       .div-3 h2{
         position: absolute;
@@ -281,7 +285,10 @@ margin-top: 100px;
         border-bottom: 2px solid whitesmoke;
         padding: 10px 10px 10px 10px;
         
-      }         
+      }   
+      .blue_page{
+background-color:rgb(23, 23, 68) ;
+      }      
  /* grid css ends*/        
 /*grid animation and effects starts*/
  .main-div-2 {
