--- a/for simulation/login_style.css
+++ b/for simulation/login_style.css
@@ -1,96 +1,140 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:600|Noto+Sans|Open+Sans:400,700&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
 body{
-	margin: 0;
-	padding: 0;
-	font-family: 'Mulish', sans-serif;
-	/*background: #d1e8e2;*/
-	background: url(blue.jpg) no-repeat fixed center;
-	background-size: cover;
-
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  font-family: sans-serif;
+  justify-content: center;
+  background: url(b.jpg) no-repeat fixed center;
+  background-size: cover;
+  background-position: center;
+  /*background-color: white;*/
+}
+.container{
+  position: relative;
+  max-width: 400px;
+  background: whitesmoke;
+  padding: 60px 40px;
+  border-radius: 0.5em;
+  box-shadow: 4px 8px 8px #005b74;
+}
+header{
+  font-size: 40px;
+  margin-bottom: 60px;
+  font-family: 'Montserrat', sans-serif;
+}
+.input-field, form .button{
+  margin: 25px 0;
+  position: relative;
+  height: 50px;
+  width: 100%;
+}
+.input-field input{
+  height: 100%;
+  width: 100%;
+  border: 1px solid silver;
+  padding-left: 15px;
+  outline: none;
+  font-size: 19px;
+  transition: .4s;
+}
+input:focus{
+  border: 1px solid #1DA1F2;
+}
+.input-field label, span.show{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.input-field label{
+  left: 15px;
+  pointer-events: none;
+  color: grey;
+  font-size: 18px;
+  transition: .4s;
+}
+span.show{
+  right: 20px;
+  color: #111;
+  font-size: 14px;
+  font-weight: bold;
+  cursor: pointer;
+  user-select: none;
+  visibility: hidden;
+  font-family: 'Open Sans', sans-serif;
+}
+input:valid ~ span.show{
+  visibility: visible;
+}
+input:focus ~ label,
+input:valid ~ label{
+  transform: translateY(-33px);
+  background: white;
+  font-size: 16px;
+  color: #1DA1F2;
+}
+form .button{
+  margin-top: 30px;
+  overflow: hidden;
+  z-index: 111;
+}
+.button .inner{
+  position: absolute;
+  height: 100%;
+  width: 300%;
+  left: -100%;
+  z-index: -1;
+  transition: all .4s;
+  background-color: rgba(0, 132, 255, 0.904);
+}
+.button:hover .inner{
+  left: 0;
+  background-color: black;
+}
+.button button{
+  width: 100%;
+  height: 100%;
+  border: none;
+  background: none;
+  outline: none;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
 }
 
-
-
-
-
-/*
-body{
-	margin: 0;
-	padding: 0;
-	font-family: sans-serif;
-	background: #d1e8e2; /*#d1e8e2*/
-	/*background: url(bk9.jpg) no-repeat;
-	background-size: cover;*/
-
-
-#nm{
-    letter-spacing: 3px;
+.links{
+  display: flex;
+  cursor: pointer;
 }
 
-.name{
-	color: #000000;
-	top: 30%;
-	left: 30%;
-	margin: 20px;
+.links i{
+  font-size: 23px;
+  line-height: 40px;
+  margin-left: -90px;
 }
-
-.box{
-	width: 470px;
-	text-align: center;
-    margin: 5em auto;
-    padding: 5em;
-    background-color: #fdfdff;
-    border-radius: 0.5em;
-    box-shadow: 5px 10px 10px #005b74;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -225px 0 0 -225px;
+.links span{
+  position: absolute;
+  font-size: 17px;
+  font-weight: bold;
+  padding-left: 8px;
+  font-family: 'Open Sans', sans-serif;
 }
-
-.box h1{
-	color: #000000;
-	font-weight: 400;
+.signup{
+  margin-top: 50px;
+  font-family: 'Noto Sans', sans-serif;
 }
-
-.box input[type = "text"], .box input[type = "password"]{
-	border: 0;
-	background: none;
-	display: block;
-	margin: 6% auto;
-	text-align: center;
-	border: 1px solid #005b74;
-	padding: 14px 10px;
-	width: 65%;
-	outline: none;
-	color: #000000;
-	border-radius: 4px;
+.signup a{
+  color: #3498db;
+  text-decoration: none;
 }
-
-.box input[type = "submit"]{
-	border: 0;
-	background: none;
-	display: block;
-	margin: 6% auto;
-	text-align: center;
-	border: 2px solid #005b74; /*#00e4e8*/
-	padding: 5% 12%;
-	outline: none;
-	color: #005b74;
-	border-radius: 25%;
-	cursor: pointer;
-}
-
-.box input[type = "submit"]:hover{
-	background: #add8e6;
-}
-
-::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-  color: #00000091; /*#00e4e8*/
-  opacity: 1; /* Firefox */
-}
-
-.links a {
-	justify-self: center;
-	color: #213466f2;
-	font-family: sans-serif;
+.signup a:hover{
+  text-decoration: underline;
 }
