--- a/for_simulation/styles.css
+++ b/for_simulation/styles.css
@@ -14,7 +14,7 @@ body {
 }
 /* nav css starts*/
 .yellow{
-  background: #22253c;
+  background:#073957;
   position: relative;
 }
 nav {
@@ -23,7 +23,7 @@ nav {
   background: #fff;
   padding: 50px 0;
   box-shadow: 0px 5px 0px #dedede;
-  background:#22253c; 
+  background:#073957; 
   color: rgba(0, 0, 0, 0.5);
 }
 
@@ -125,7 +125,7 @@ opacity: -4;
 padding:70px 30px 70px 30px;
 position: relative;
 margin-bottom:0px;
-background-color: rgb(23, 23, 68)
+background-color: rgba(24, 76, 155, 0.801)
 ;
 
 }
@@ -176,7 +176,7 @@ margin-top: 0%;
 grid-area: carousel;
 height: 100%;
 width: 100%;
-background-color: #143064;
+background-color: #0a7292;
 }
 .carousel-item {
 height: 300px;
@@ -196,7 +196,7 @@ grid-area: div1;
 position: relative;
 justify-content: center;
 align-items: center;
-background-color:rgb(109, 21, 52);
+background-color:#143064;
 }
 .main-div-2{
 grid-area: div2;
@@ -209,7 +209,7 @@ border: 1px solid grey;
 }
 .main-div-3{
 grid-area: div3;
-background-color:rgb(109, 21, 52);
+background-color:#0a7292;
 position: relative;
 border: 1px solid grey;
  justify-content: center;
@@ -222,7 +222,7 @@ border: 1px solid grey;
 position: relative;
  justify-content: center;
  align-items: center;
- background-color:rgb(109, 21, 52);
+ background-color:#143064;
 
 }
 .main-div-5{
@@ -231,7 +231,7 @@ border: 1px solid grey;
 position: relative;
  justify-content: center;
  text-align: center;
- background-color: #143064;
+ background-color: #0a7292;
  
 }
 .div-2{
@@ -241,13 +241,13 @@ margin-top: 100px;
 .div-1{
 margin-left: 150px; 
 margin-top: 100px;
-background-color:rgb(109, 21, 52);
+background-color:#143064;
 margin-bottom: 10px;
 }
 .div-5{
   margin-left: 50px; 
   margin-top: 50px;
-  background-color: #143064;
+  background-color: #0a7292;
   margin-bottom: 20px;
   }
 .div5 svg {
@@ -256,7 +256,7 @@ margin-bottom: 10px;
 .div-4{
   margin-left: 150px; 
   margin-top: 100px;
-  background-color:rgb(109, 21, 52);
+  background-color:#143064;
   } 
   .div-3{
    
@@ -295,7 +295,7 @@ margin-bottom: 10px;
       color: black;
      
     } 
-    
+   
     
     a div h2{
       margin-top: 30px;
@@ -306,6 +306,8 @@ margin-bottom: 10px;
     }   
     .div-5 h2{
       border-bottom: 2px solid whitesmoke;
+      margin-top: 3px;
+      color: ghostwhite;
     }
     #blue-page{
 background-color:rgb(23, 23, 68)!important ;
@@ -506,13 +508,14 @@ h5{
 .main-div-1{
   width: 450px;
   position: relative;
+  background-color: #0a7292 ;
 }
 .main-div-2{
   width: 450px;
 }
 .main-div-3{
   width: 450px;
-  background-color:rgb(20, 94, 20);
+  background-color: #0a7292 ;
 }
 .main-div-4{
   width: 450px;
@@ -524,6 +527,7 @@ h5{
   object-fit: cover;
   width: 90%;
   margin-left: 5px;
+  background-color: #0a7292 ;
 
 }
 
@@ -541,6 +545,7 @@ h5{
   width:350px;
   height:220px;
   margin-left: 5px;
+  background-color: #143067;
 
 }.div-2{
   object-fit: cover;
@@ -552,7 +557,8 @@ h5{
   object-fit: cover;
   width: 90%;
   margin-left: 5px;
-  background-color: rgb(20, 94, 20);
+  background-color: #0a7292 ;
+;
 
 }
 .div-4{
