--- a/for_simulation/styles.css
+++ b/for_simulation/styles.css
@@ -493,7 +493,269 @@ h5{
   border-bottom: 1px solid aliceblue;
 }
 /*media queries for reponsiveness*/  
-
+@media only screen and (max-width: 1200px) and (min-width: 800px)  {
+  .grid {
+    grid-template-areas:
+      'carousel'
+      'div1'
+      'div2'
+      'div3'
+      'div4'
+      'div5'
+      ;
+  }
+  .main-div-1{
+    width: 100%;
+    position: relative;
+    background-color: #0a7292 ;
+  }
+  .main-div-2{
+    width: 100%;
+  }
+  .main-div-3{
+    width: 100%;
+    background-color: #0a7292 ;
+  }
+  .main-div-4{
+    width: 100%;
+  }
+  .main-div-5{
+    width: 100%;
+  }
+  .div-1{
+    object-fit: cover;
+    width: 90%;
+    margin-left: 5px;
+    background-color: #0a7292 ;
+  
+  }
+  
+   svg{
+    width:75%;
+    height:50%;
+    object-fit: cover;
+  }
+  
+  .row-content{
+    width:100%;
+    height:420px;
+  }
+  #mycarousel{
+    width:100%px;
+    height:220px;
+    margin-left: 5px;
+    background-color: #143067;
+  
+  }.div-2{
+    object-fit: cover;
+    width: 90%;
+    margin-left: 5px;
+  
+  }
+  .div-3{
+    object-fit: cover;
+    width: 90%;
+    margin-left: 5px;
+    background-color: #0a7292 ;
+  ;
+  
+  }
+  .div-4{
+    object-fit: cover;
+    width: 90%;
+    margin-left: 5px;
+  
+  }
+  .div-4 h2{
+    position: absolute;
+    top: 0%;
+    left: 10%;
+    color: whitesmoke;
+    z-index: 2;
+  }
+  
+  .div-5{
+    object-fit: cover;
+    width: 90%;
+    margin-left: 5px;
+  
+  }
+  .div-5 h2{
+    position: absolute;
+    top: 0%;
+    left: 10%;
+    color: whitesmoke;
+    z-index: 2;
+  }
+  
+  a div h2{
+    margin-top: 3px;
+    border-top: 0px;
+    border-bottom: 0px;
+    padding: 0px;
+    border-radius: 0px;
+  }
+  
+  
+  nav {
+    width: 60%;
+    margin: 0 auto;
+    background: #fff;
+    padding: 50px 0;
+    box-shadow: 0px 5px 0px #dedede; 
+    background:#22253c;
+    color: rgba(0, 0, 0, 0.5);
+  }
+  .line {
+    width: 30px;
+    height: 3px;
+    background:rgb(214, 198, 198);
+    margin: 5px;
+  }
+  a.navbar-brand{
+    color:rgb(214, 198, 198);
+    opacity: 1;
+  }
+  .yellow{
+    background: #22253c;
+    position: relative;
+    width: 100%!important;
+  }
+  .bt{
+    padding: 15px!important;
+    text-decoration: none!important;
+    color: #aaa!important;
+    font-weight: 800!important;
+    text-transform: uppercase!important;
+    font-size: 20px!important; 
+    position: absolute!important;
+    right: 10%!important;
+    top:35%;
+    border-radius: 15px;
+  }
+  
+  nav ul {
+    list-style: none;
+    text-align: center;
+  }
+  nav ul li {
+    display: inline-block;
+  }
+  nav ul li a {
+    display: block;
+    padding: 15px;
+    text-decoration: none;
+    color: #aaa;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0 10px;
+    font-size: 20px;
+  }
+  nav ul li a,
+  nav ul li a:after,
+  nav ul li a:before {
+    transition: all .5s;
+  }
+  nav ul li a:hover {
+    color: #555;
+  }
+  nav.shift ul li a {
+    position:relative;
+    z-index: 1;
+  }
+  nav.shift ul li a:hover {
+    color: whitesmoke;
+  }
+  nav.shift ul li a:after {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+    width: 100%;
+    height: 1px;
+    content: '.';
+    color: transparent;
+    background: rgb(107, 76, 107);
+    visibility: none;
+    opacity: 0;
+    z-index: -1;
+  }
+  nav.shift ul li a:hover:after {
+    opacity: 1;
+    visibility: visible;
+    height: 100%;
+  }
+  .slider{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: -1;
+  
+  }  
+  .row-content{
+  background-color: #143064;
+  width: 102%;
+  }
+  
+  .carousel-item {
+  height: 200px;
+  text-align: center;
+  justify-content: space-around;
+  margin-top: 5cm;
+  }
+  .carousel-inner{
+  width: 500px;
+  overflow: auto;
+  }
+  
+  .carousel-item img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 200px;
+  }
+  .head-img{
+  height: 70px;
+  width: 80px;
+  transform: translateX(120%);
+  }
+  .jumbo{
+  background-color: rgb(23, 23, 68)
+  ;
+  position: relative;
+  height: 400px;
+  width: 100%!important;
+  }
+  .heading h1{
+  border-bottom: 1px solid whitesmoke;
+  color: azure;
+  font-weight: 800;
+  transform: translate(40%);
+  }
+  .heading h2{
+  display: none;
+  }
+  .signup{
+    transform: translateY(-120%);
+  }
+  header h3{
+  color: #dedede;
+  position: absolute;
+  top: 45%;
+  right: 50%;
+  border-bottom: 0.5px solid whitesmoke;
+  font-style: italic;
+  }
+  .page-footer{
+    width: 100%!important;
+  }
+  }
+  
 @media (max-width: 700px) {
 .grid {
   grid-template-areas:
