nav/padding/etc

--- a/for_simulation/login_style.css
+++ b/for_simulation/login_style.css
@@ -34,7 +34,8 @@ body{
 }
 
 .box{
-	width: 470px;
+	width: 450px;
+	height: 470px;
 	text-align: center;
     margin: 5em auto;
     padding: 5em;
@@ -44,7 +45,7 @@ body{
     position: absolute;
     top: 50%;
     left: 50%;
-    margin: -225px 0 0 -225px;
+    margin: -200px 0 0 -225px;
 }
 
 .box h1{
